--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   pythondemo:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: python:3.12
     container_name: pythondemo
     restart: always
     ports:
@@ -12,7 +10,23 @@ services:
     volumes:
       - data:/app/data
     working_dir: /app
-    command: bash init.sh
+    command: >
+      bash -c '
+        pip install --upgrade pip &&
+        pip install uv &&
+        cd /app/data &&
+        [ -d pythondemo ] || uv venv pythondemo &&
+        cd pythondemo &&
+        echo "[project]
+name = \"agents\"
+version = \"0.1.0\"
+description = \"Add your description here\"
+readme = \"README.md\"
+requires-python = \">=3.12\"
+dependencies = [\"anthropic>=0.49.0\", \"autogen-agentchat>=0.4.9.2\"]" > pyproject.toml &&
+        uv pip install -r <(uv pip compile pyproject.toml) &&
+        uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+      '
 
 volumes:
   data:
