--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,16 +17,5 @@ services:
         cd /app/data &&
         [ -d pythondemo ] || uv venv pythondemo &&
         cd pythondemo &&
-        echo "[project]
-name = \"agents\"
-version = \"0.1.0\"
-description = \"Add your description here\"
-readme = \"README.md\"
-requires-python = \">=3.12\"
-dependencies = [\"anthropic>=0.49.0\", \"autogen-agentchat>=0.4.9.2\"]" > pyproject.toml &&
-        uv pip install -r <(uv pip compile pyproject.toml) &&
-        uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-      '
-
-volumes:
-  data:
+        if [ ! -f pyproject.toml ]; then
+          printf "[project]\nname = \"agents\"\nversion = \"0.1.0\"\ndescription = \"Add your description here\"\nreadme = \"README.md\"\nrequires-python = \">=3.12\"\ndependencies = [\"anthropic>=0.49.0\", \"autogen-ag]()
